# cyberlytica-website

./: .travis.yml  archives.html  authors.html  categories.html  distributing-python-code.html  index.html  pelican-start.bat  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html
.github/workflows/: build-and-publish.yaml
author/: admin.html
category/: python.html
output/: archives.html  authors.html  categories.html  distributing-python-code.html  index.html  tags.html
output/author/: admin.html
output/category/: python.html
output/feeds/: all.atom.xml
output/tag/: pyinstaller.html  python.html
output/theme/css/: bootstrap.css  style.css
output/theme/css/styles/: bootstrap-styles.css  buttons.css  colours.css  default.css  footer.css  page-div.css  particles.css  quote-carousel.css  services.css  team.css
tag/: pyinstaller.html
tests/: test_cyberlytica_website.py
theme/: particles.json
theme/css/: style.css
theme/css/styles/: colours.css  navigation.css  page-div.css  quote-carousel.css
theme/js/: jquery-rss.js
themes/basic/static/css/: style.css
themes/basic/static/css/styles/: about.css  bootstrap-styles.css  buttons.css  colours.css  navigation.css  page-div.css  services.css
themes/basic/templates/: base.html  index.html  navigation.html
themes/basic/templates/partial/: navigation.html
