[tool.poetry]
name = "cyberlytica-website"
version = "0.1.0"
description = ""
authors = ["Jack McKew <jackmckew2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.2.0"
markdown = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
